updated Swagger API documentation and readme
